update source code depends on coding style